--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Mama's Boy Photography">
     <meta name="author" content="Poorna Jayasekara">
     <title>Welcome - Mama's Boy Photography</title>
-
+    <link href="img/favicon.png" rel="shortcut icon" type="image/png"/>
 
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
